Fix : text overflow in game list

--- a/css/page-index.css
+++ b/css/page-index.css
@@ -107,7 +107,7 @@ h1::before
 
 .icon-social-media {
     width: 40px;
-    margin: 5px;
+    margin: 5px 5px 0 5px;
 }
 
 .grid-contact-1 {
